# Demadn-Quadratic-Tilting

./: README.md  power_demand_final.csv  pyproject.toml  seq2seq_tilting.ipynb
demand_quadratic_tilting/: README.md  __init__.py  constants.py  metrics.py  model.py  pipeline.py  preprocessing.py  tilt.py  windows.py
pth/: best_model_20250808_071204.pth  best_model_20250808_071545.pth  best_model_20250808_071948.pth  best_model_20250808_072535.pth  best_model_20250808_074845.pth  best_model_20250808_075244.pth  best_model_20250808_075633.pth
src/: #2_trend_seasonality_DL.ipynb  rs_trial_015.pth  trend-fourier-Seq2Seq_LSTM.ipynb  trend_fourier_seq2seq_hqt.ipynb
