[project]
name = "demadn-quadratic-tilting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.22.0",
    "ipykernel>=6.30.1",
    "jax[cpu]>=0.6.2",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "numpyro>=0.19.0",
    "pymc>=5.25.1",
    "pytensor>=2.31.7",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
]
