[project]
name = "demand-quadratic-tilting"
version = "0.1.0"
description = "Korean holiday demand correction via Hierarchical Quadratic Tilting (HQT)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.22.0",
    "ipykernel>=6.30.1",
    "jax[cpu]>=0.6.2",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "numpyro>=0.19.0",
    "polars>=1.38.1",
    "pymc>=5.25.1",
    "pytensor>=2.31.7",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
    "workalendar>=17.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["demand_quadratic_tilting*"]
